[tool.poetry]
name = "build-tools"
version = "0.0.0"
description = "Personal build helpers for vite"
authors = ["IgnusG"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
